2008-03-11  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/colorbutton.h: Added A_EXPORT.
	
	* libavogadro/src/periodictableview.h: Added A_EXPORT.

2008-03-10  Jordan Mantha  <jordan.mantha@gmail.com>

	* doc/CMakeLists.txt: fix docbook2{pdf,html} detection. Also added some
	install rules but left it commented out for now as it's still buggy.

2008-03-10  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/povpainter.cpp: Add } to camera {. Fixes #1911507
	
2008-03-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/iso.cpp: Corrected a bug where the surface
	generation could step off the end of the cube by one unit in x, y and
	z. Also removed some of the debug output.

2008-03-09  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/orbital*.*: Add support for multiple
	orbitals/cubes.

	* testfiles/ch3cl.cube.gz: Example file for multiple cubes.

2008-03-08  Jordan Mantha  <jordan.mantha@gmail.com>

	* libavogadro/src/engines/ribbonengine.*: Added support for
	including nitrogens in the protein backbone chain. Also add
	support for engine configuration persistence (read/writeSettings)
	* libavogadro/src/engines/ribbonsettingswidget.ui: add checkbox
	for above.

2008-03-08  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glpainter.cpp: Patch from Jordan Mantha
	<jordan.mantha@gmail.com> fixes ribbon rendering - go right to the end
	of the protein backbone. Thanks for the patch Jordan.

	* libavogadro/src/glwidget.cpp: Added some read and write locks at
	appropriate looking places in the GLWidget. Should help but it may
	need to be finer grained in places. Reverted - locks up a lot...

	* avogadro/src/main.cpp: Looks like some drivers have broken
	XInitThreads() functions. Only enable in threaded GL builds.

	* libavogadro/src/engines/surfaceengine.*: Just return from the render
	function if the VdW thread is running - should fix crashes.
